@@ -125,6 +125,9 @@
    - markus@cvs.openbsd.org 2002/01/11 10:31:05
      [packet.c]
      handle received SSH2_MSG_UNIMPLEMENTED messages; ok djm@
+   - markus@cvs.openbsd.org 2002/01/11 13:36:43
+     [ssh2.h]
+     add defines for msg type ranges
 
 
 20020121
